src/fewshot/common_example/common_example_warning.txt
src/example.cpp:35: error: Null pointer dereference: ptr [nullPointer]
    printf("%d\n", ptr[i]);
                    ^